@@ -11,7 +11,7 @@
   </desktop>
 
   <desktopbar>
-    <options show-clock="TRUE"/>
+    <options show-clock="true"/>
     <positions>
 	  <bar name="quicklaunch" left="10" top="2" width="250" height="22"/>
 	  <bar name="taskbar" left="300" top="2" width="400" height="22"/>
@@ -22,7 +22,7 @@
   </taskbar>
 
   <notify-icons>
-    <options hide-inactive="TRUE" show-hidden="FALSE"/>
+    <options hide-inactive="true" show-button="true" show-hidden="false"/>
     <icon name="Volume Control" text="Volume" show="show"/>
   </notify-icons>
 
